[package]
name = "chai-api"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Heider <jacob@pkgx.dev>"]
description = "A simple REST API for the CHAI database"
readme = "README.md"
license = "MIT"
repository = "https://github.com/teaxyz/chai-oss"

[lib]
name = "chai_api"
path = "src/lib.rs"

[[bin]]
name = "chai-api"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.11.0", features = ["serde", "v4"] }
actix-web = "4.3"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = [
  "with-serde_json-1",
  "with-chrono-0_4",
  "with-uuid-1",
] }
deadpool-postgres = "0.10.0"
url = "2.5.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
